test/variables/remote/disallowed-intents.good
disallowed-intents.chpl:1: error: unsupported intent for remote variable
disallowed-intents.chpl:2: error: unsupported intent for remote variable
disallowed-intents.chpl:3: error: unsupported intent for remote variable
