test/variables/remote/disallowed-intents.chpl
on Locales.last ref x = 42;
on Locales.last const ref y = 42;
on Locales.last param z = 42;
/* the 'type' case won't even parse; not tested here. */
